# pre-learn

onnx_runtime/: =  CMakeLists.txt  custom_op.cpp  custom_op_model.onnx  f16.prof  main.cpp  mnist.keras  model.onnx  model.quant.onnx  model_fp16.onnx  model_gen.ipynb  model_opt_all.onnx  onnx.prof  onnx.quant.prof  test.py
onnx_runtime/saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
onnx_runtime/saved_model/variables/: variables.data-00000-of-00001  variables.index
tvm/: infer.cpp  learn_10.ipynb  learn_1_pre.ipynb  learn_2.ipynb  learn_3.ipynb  learn_5.ipynb  learn_8.ipynb  learn_9.ipynb  learn_auto_sche.ipynb  qa.ipynb  resnet18.graph
